--- a/style.css
+++ b/style.css
@@ -215,7 +215,7 @@ section.visible {
      color: white;
      font-size: 1.2rem;
      transition: all 0.3s ease;
-     animation: fadeIn 1s 0.5s ease both,float 3s ease-in-out infinite;;
+     animation: fadeIn 1s 0.5s ease both,float 3s ease-in-out infinite;
 }
 
 .social-icons a:hover {
